@@ -85,8 +85,10 @@ class MediaWikiApiImageFetchingStrategy extends ImageFetchingStrategy {
 			try {
 				String queryString = String.format(
 						"action=query&titles=%s&generator=images&prop=imageinfo&iiprop=url&format=xml%s", //$NON-NLS-1$
-						URLEncoder.encode(pageName, "UTF-8"), //$NON-NLS-1$
-						(gimcontinue == null ? "" : "&gimcontinue=" + URLEncoder.encode(gimcontinue, "UTF-8"))); //$NON-NLS-1$ //$NON-NLS-2$ //$NON-NLS-3$
+						URLEncoder.encode(pageName, StandardCharsets.UTF_8),
+						(gimcontinue == null
+								? "" //$NON-NLS-1$
+								: "&gimcontinue=" + URLEncoder.encode(gimcontinue, StandardCharsets.UTF_8))); //$NON-NLS-1$
 				apiUrl = new URL(base + "api.php?" + queryString); //$NON-NLS-1$
 			} catch (Exception e) {
 				throw new BuildException("Cannot compose API URL", e); //$NON-NLS-1$
